objects/GEMS_Eligibility_AEP_File_Details__c.object
<CustomObject>
    <fields>
        <fullName>AD_Date__c</fullName>
        <label>AD Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01/01</fullName>
                </value>
                <value>
                    <fullName>01/15</fullName>
                </value>
                <value>
                    <fullName>02/01</fullName>
                </value>
                <value>
                    <fullName>02/15</fullName>
                </value>
                <value>
                    <fullName>03/01</fullName>
                </value>
                <value>
                    <fullName>03/15</fullName>
                </value>
                <value>
                    <fullName>04/01</fullName>
                </value>
                <value>
                    <fullName>04/15</fullName>
                </value>
                <value>
                    <fullName>05/01</fullName>
                </value>
                <value>
                    <fullName>05/15</fullName>
                </value>
                <value>
                    <fullName>06/01</fullName>
                </value>
                <value>
                    <fullName>06/15</fullName>
                </value>
                <value>
                    <fullName>07/01</fullName>
                </value>
                <value>
                    <fullName>07/15</fullName>
                </value>
                <value>
                    <fullName>08/01</fullName>
                </value>
                <value>
                    <fullName>08/15</fullName>
                </value>
                <value>
                    <fullName>09/01</fullName>
                </value>
                <value>
                    <fullName>09/15</fullName>
                </value>
                <value>
                    <fullName>10/01</fullName>
                </value>
                <value>
                    <fullName>10/15</fullName>
                </value>
                <value>
                    <fullName>11/01</fullName>
                </value>
                <value>
                    <fullName>11/15</fullName>
                </value>
                <value>
                    <fullName>12/01</fullName>
                </value>
                <value>
                    <fullName>12/15</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASP_Number__c</fullName>
        <label>ASP Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Eligibility_Process_Case__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Eligibility_Process_Case__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_AEP__c</fullName>
        <label>Active AEP?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allow_Contact__c</fullName>
        <label>Allow Contact?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Effective_Date__c</fullName>
        <formula>Eligibility_Process_Case__r.GEMS_Account_Submission_Info__r.GEMS_Case_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dataset_In__c</fullName>
        <label>Dataset In</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataset_Out__c</fullName>
        <label>Dataset Out</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Week__c</fullName>
        <label>Day of the Week</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligibility_Process_Case__c</fullName>
        <label>Eligibility Process Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Eligibility AEP File Details</relationshipLabel>
        <relationshipName>GEMS_Eligibility_AEP_File_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FSU_Location__c</fullName>
        <formula>TEXT(Eligibility_Process_Case__r.GEMS_Account_Submission_Info__r.FSU_Location__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Center Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Description__c</fullName>
        <label>File Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Layout__c</fullName>
        <label>File Layout</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OTL</fullName>
                </value>
                <value>
                    <fullName>AON HEWITT</fullName>
                </value>
                <value>
                    <fullName>EDI 834 4010</fullName>
                </value>
                <value>
                    <fullName>EDI 834 5010</fullName>
                </value>
                <value>
                    <fullName>BLUESTAR</fullName>
                </value>
                <value>
                    <fullName>CUSTOM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCSC_Division__c</fullName>
        <formula>text(Eligibility_Process_Case__r.GEMS_Account_Submission_Info__r.HCSC_Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HCSC Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implement_Target_Date__c</fullName>
        <label>Implement Target Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Setup_End_Date__c</fullName>
        <label>Initial Setup End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_Setup_Start_Date__c</fullName>
        <label>Initial Setup Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Key_Type__c</fullName>
        <label>Key Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BlueStar Derivation</fullName>
                </value>
                <value>
                    <fullName>Group/Section</fullName>
                </value>
                <value>
                    <fullName>Map Derivation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Labor__c</fullName>
        <label>Labor?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Membership_Specialist__c</fullName>
        <label>Membership Specialist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_AD_Date__c</fullName>
        <label>Other AD Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Day_of_the_Week__c</fullName>
        <label>Other Day of the Week</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Vendor__c</fullName>
        <label>Other Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_EEE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary EEE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GEMS_Eligibility_AEP_File_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Ready_End_Date__c</fullName>
        <label>Production Ready End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Production_Ready_Start_Date__c</fullName>
        <label>Production Ready Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Programmer__c</fullName>
        <label>Programmer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_EEE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary EEE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GEMS_Eligibility_AEP_File_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Split_File__c</fullName>
        <label>Split File?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Setup In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending First Test File</fullName>
                </value>
                <value>
                    <fullName>Testing In Progress</fullName>
                </value>
                <value>
                    <fullName>Testing Production File</fullName>
                </value>
                <value>
                    <fullName>Pending Prod</fullName>
                </value>
                <value>
                    <fullName>Production In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitter_ID__c</fullName>
        <label>Submitter ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Testing_End_Date__c</fullName>
        <label>Testing End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Testing_Start_Date__c</fullName>
        <label>Testing Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transmission_Method__c</fullName>
        <label>Transmission Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SFTP</fullName>
                </value>
                <value>
                    <fullName>AS2</fullName>
                </value>
                <value>
                    <fullName>EMCNet</fullName>
                </value>
                <value>
                    <fullName>FTP</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SFTP with PGP</fullName>
                </value>
                <value>
                    <fullName>SSH Key Authentication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UID_Type__c</fullName>
        <label>UID Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Generated</fullName>
                </value>
                <value>
                    <fullName>System Generated</fullName>
                </value>
                <value>
                    <fullName>SSN</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABPA</fullName>
                </value>
                <value>
                    <fullName>ACADEMIC HEALTH PLAN</fullName>
                </value>
                <value>
                    <fullName>ACCORDWARE</fullName>
                </value>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>ALAQUINT</fullName>
                </value>
                <value>
                    <fullName>ALLEGIANCE</fullName>
                </value>
                <value>
                    <fullName>ALLIED BENEFIT SERVICES</fullName>
                </value>
                <value>
                    <fullName>AMERIBEN</fullName>
                </value>
                <value>
                    <fullName>AON HEWITT/ALIGHT</fullName>
                </value>
                <value>
                    <fullName>APPIRIO</fullName>
                </value>
                <value>
                    <fullName>APPRIZE TECHNOLOGY</fullName>
                </value>
                <value>
                    <fullName>ASCENTIS</fullName>
                </value>
                <value>
                    <fullName>B SWIFT</fullName>
                </value>
                <value>
                    <fullName>BAKER TILLY VANTAGEN</fullName>
                </value>
                <value>
                    <fullName>BASYS (SUN SYSTEM)</fullName>
                </value>
                <value>
                    <fullName>BAYBRIDGE ADMIN</fullName>
                </value>
                <value>
                    <fullName>BEACON</fullName>
                </value>
                <value>
                    <fullName>BENAWARE</fullName>
                </value>
                <value>
                    <fullName>BENEFIT ADMIN</fullName>
                </value>
                <value>
                    <fullName>BENEFIT ADVANTAGE</fullName>
                </value>
                <value>
                    <fullName>BENEFIT ALLOCATION SYSTEMS</fullName>
                </value>
                <value>
                    <fullName>BENEFIT CONCEPTS</fullName>
                </value>
                <value>
                    <fullName>BENEFIT FIRST</fullName>
                </value>
                <value>
                    <fullName>BENEFIT FOCUS</fullName>
                </value>
                <value>
                    <fullName>BENEFIT HARBOR</fullName>
                </value>
                <value>
                    <fullName>BENEFIT MALL</fullName>
                </value>
                <value>
                    <fullName>BENEFIT ONE</fullName>
                </value>
                <value>
                    <fullName>BENEFIT OUTSOURCING SOLUTIONS</fullName>
                </value>
                <value>
                    <fullName>BENEFIT PARTNERS</fullName>
                </value>
                <value>
                    <fullName>BENEFIT SYSTEMS &amp; SERVICES (BSSI)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_AEP_Prod_File_Details__c</fullName>
        <label># of AEP Prod File Details</label>
        <summaryForeignKey>GEMS_Eligibility_Production__c.Eligibility_AEP_File_Details__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_AEP_Test_File_Details__c</fullName>
        <label># of AEP Test File Details</label>
        <summaryForeignKey>GEMS_Eligibility_Testing__c.Eligibility_AEP_File_Details__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Eligibility AEP File Details</label>
    <nameField>
        <displayFormat>AEP-{0000}</displayFormat>
        <label>GEMS Eligibility AEP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eligibility AEP File Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>GEMS_Eligibility_AEP_File_Detail_AD_Date</fullName>
        <active>true</active>
        <description>When selecting &quot;Other&quot; you must enter a value in &quot;Other AD Date&quot;.</description>
        <errorConditionFormula>(ISPICKVAL( AD_Date__c , &apos;Other&apos;)  &amp;&amp;  ISBLANK( Other_AD_Date__c ))</errorConditionFormula>
        <errorMessage>When selecting &quot;Other&quot; you must enter a value in &quot;Other AD Date&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GEMS_Eligibility_AEP_File_Detail_Vendor</fullName>
        <active>true</active>
        <description>When selecting &quot;Other&quot; you must enter a value in &quot;Other Vendor&quot;.</description>
        <errorConditionFormula>(ISPICKVAL(  Vendor__c , &apos;Other&apos;)  &amp;&amp;  ISBLANK(  Other_Vendor__c ))</errorConditionFormula>
        <errorMessage>When selecting &quot;Other&quot; you must enter a value in &quot;Other Vendor&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GEMS_Eligibility_AEP_File_Details_Other</fullName>
        <active>true</active>
        <description>When selecting &quot;Other&quot; you must enter a value in &quot;Other Day of the week&quot;.</description>
        <errorConditionFormula>(INCLUDES(Day_of_the_Week__c , &apos;Other&apos;)  &amp;&amp;  ISBLANK(Other_Day_of_the_Week__c))</errorConditionFormula>
        <errorMessage>When selecting &quot;Other&quot; you must enter a value in &quot;Other Day of the week&quot;.</errorMessage>
    </validationRules>
</CustomObject>